feat: 401无权限跳转登录页面

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -54,6 +54,7 @@
                 //写入localstorage
                 writeToken(data.data);
                 //跳转
+                location.href="/static/user.html";
             }else {
                 alert("账号或密码错误。");
             }
