--- a/src/main/resources/static/user.html
+++ b/src/main/resources/static/user.html
@@ -24,27 +24,35 @@
 		<div class="left_menu" id="left_menu">
 		</div>
 		<div class="content_wrap">
-			<h2>资料</h2>
-			<div class="setting_title">
-				<div class="form-group">
-					<label class="col-sm-3 control-label" style="width:80px;">配置类型：</label>
-					<div class="col-sm-9"> 
-						<select class="form-control" id="catetoryList" style="width: 250px;">
-						</select>
+			<h2>用户信息</h2>
+			<div class="func_wrap">
+				<div class="addbtn"><button type="button" class="btn-success btn btn-add-record fl mr15">添加</button></div>
+				<div class="search_filter">
+					<div class="input-group">
+						<input type="text" class="form-control" placeholder="请输入要搜索的内容" id="searchHospitalName">
+						<span class="input-group-addon">
+							<span class="glyphicon glyphicon-search"></span>
+						</span>
 					</div>
-						
 				</div>
 			</div>
-			<form class="form-horizontal mt50" role="form" style="margin-top: 10px;">
-				<div class="col-sm-5" style="width: 600px;border: gray 1px dotted;padding: 20px 20px 10px 10px;">
-					<div id="configArea">
-					</div>
-					<div class="form-group">
-						<button type="button" class="btn btn-success fr mr15 mt35 submitconfigbtn"><span class="glyphicon glyphicon-ok"></span> 确 定</button>
-					</div>
+			<div class="list_wrap">
+				<table class="table table-bordered table-condensed">
+					<tr>
+						<th width="40%">用户信息</th>
+						<th width="20%">创建时间</th>
+						<th width="20%">修改时间</th>
+						<th width="20%">操作</th>
+					</tr>
+					<tbody class="trValueList">
+					</tbody>
+				</table>
+				<div id="page" class="page_wrap" style="text-align: right; width: 100%;">
 				</div>
-				
-			</form>
+				<input type="hidden" id="pageIndex" />
+				<input type="hidden" id="pageTotal" />
+				<input type="hidden" id="pageEachNum" />
+			</div>
 		</div>
 	</div>
 	
@@ -57,19 +65,43 @@
 		
 		function refreshTable(){
 			//加载配置类型
-            commonAjax.get("users",{},function (data) {
+            commonAjax.get("/users",{},function (data) {
                 if (data.status == 1){
-                    var categoryHtml = "";
-                    var categoryList = data.data;
-                    for (var index in categoryList){
-                        var category = categoryList[index];
-                        categoryHtml += "<option value='"+category+"'>"+category+"</option>";
+                    var hospitalHtml = "";
+                    var userList = data.data.items;
+                    for (var index in userList){
+                        var user = userList[index];
+                        var createDate = new Date(user.createdtime).format("yyyy-MM-dd");
+                        var updateDate = new Date(user.updatedtime).format("yyyy-MM-dd");
+                        hospitalHtml += "<tr><td>"+user.username+"</td>"+"<td>"+createDate+"</td><td>"+updateDate+"</td>";
+                        hospitalHtml += "<td><div class='oper'>";
+                        hospitalHtml += "<a href='javascript:void(0)' class='btn btn-danger btn-xs' value="+user.id+"><span class='glyphicon glyphicon-remove'></span></a>";
+                        hospitalHtml += "</div></td></tr>";
                     }
-                    $("#catetoryList").html(categoryHtml);
+                    $(".trValueList").html(hospitalHtml);
 
+                    $("#pageIndex").val(data.data.pageIndex);
+                    $("#pageTotal").val(data.data.totalPage);
+                    $("#pageEachNum").val(data.data.limit);
                 }else{
-                    $("#catetoryList").html("<option>无配置信息</option>");
+                    $(".trValueList").html("<td colspan='4' align='center'>无用户信息</td>");
                 }
+                initButton();
+
+                //分页
+                var page=$("#page");
+                var options = {
+                    currentPage :  $("#pageIndex").val(),
+                    totalPages : $("#pageToal").val(),
+                    numberOfPages : 5,
+                    onPageClicked : function(event, originalEvent, type, page){
+                        $("#pageIndex").val(page);
+                        $("#page").find("ul").addClass("pagination ").addClass("pagination-sm");
+                        refreshTable();
+                    }
+                }
+                $("#page").bootstrapPaginator(options);
+                $("#page").find("ul").addClass("pagination").addClass("pagination-sm");
             });
 		}
 	</script>
