--- a/src/main/resources/static/user.html
+++ b/src/main/resources/static/user.html
@@ -12,7 +12,10 @@
     <script type="text/javascript" src="js/bootstrapSwitch.js"></script>
     <script type="text/javascript" src="js/script.js"></script>
     <script type="text/javascript" src="js/ComfirmDialog.js"></script>
-    
+
+	<style type="text/css">
+		#userLi{ color: #fff; background: url('/images/left_menu_bg.png') left top repeat-x;}
+	</style>
 </head>
 <body>
 <!-- 顶部 header -->
